--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trabalho Individual</title>
+    <title>Living Around</title>
 
     <!-- CSS Imports -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./responsiveCSS/index.css">
     <!-- CSS Imports -->
 
     <!-- Script Imports -->
@@ -36,7 +37,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Font Awesome Icon Import -->
 
-    <!-- ########################################################### Clean Code, Responsividade, API integration, README ########################################################### -->
     <!-- Color Scheme: #B49B2C - 25% Transparency; #686931; #1E1E1E -->
 </head>
 
@@ -49,16 +49,16 @@
                 <div class="container-fluid">
                     <ul class="position-absolute top-0 end-0 m-5 nav justify-content-end">
                         <li class="nav-item">
-                            <a aria-current="page" href="#">Acomodação</a>
+                            <a aria-current="page" href="./acomodacao.html">Acomodação</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#">Locais</a>
+                            <a href="./locais.html">Locais</a>
                         </li>
                         <li class="nav-item">
                             <a href="#">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#">Contactos</a>
+                            <a href="./contactos.html">Contactos</a>
                         </li>
                     </ul>
                 </div>
@@ -132,12 +132,12 @@
                 <div id="secondRightTextBtn" style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 600px;">
                     <!-- centered text + button -->
                      <h2 style="color: white; text-align: center; font-weight: 600; font-size: 35px; letter-spacing: 2px; width: 500px;">Descubra o seu novo escritório</h2>
-                     <button type="button" class="btn mt-4 btn-outline-dark" style="color: white; border: 3px solid white; width: 350px; height: 85px; border-radius: 50px; font-size: 30px; letter-spacing: 2px; font-family: 'Jura', sans-serif; font-weight: 600;">Descobrir</button>
+                     <a href="./acomodacao.html"><button type="button" class="btn mt-4 btn-outline-dark" style="color: white; border: 3px solid white; width: 350px; height: 85px; border-radius: 50px; font-size: 30px; letter-spacing: 2px; font-family: 'Jura', sans-serif; font-weight: 600;">Descobrir</button></a>
                 </div>
 
                 <div id="secondRightUpArrow" class="position-relative">
                     <!-- up arrow icon round outline -->
-                    <img src="./images/arrow-up-circle.svg" class="position-absolute bottom-0 end-0" style="height: 50px; filter: invert(); left: 92%; margin-bottom: 55px; transform: scale(1.4);"></img>
+                    <a href="#"><img src="./images/arrow-up-circle.svg" class="position-absolute bottom-0 end-0" style="height: 50px; filter: invert(); left: 92%; margin-bottom: 55px; transform: scale(1.4);"></img></a>
                 </div>
 
             </div>
@@ -151,12 +151,12 @@
                     <div id="thirdLeftTextBtn" style="display: flex; flex-direction: column; align-items: center; justify-content: center;  height: 650px;">
                         <!-- centered text + button -->
                         <h2 style="color: black; text-align: center; font-weight: 700; font-size: 35px; letter-spacing: 2px; width: 500px;">Temos destinos especiais para você</h2>
-                        <button type="button" class="btn mt-4 btn-outline-dark" style="border: 4px solid black; width: 350px; height: 85px; border-radius: 50px; font-size: 30px; letter-spacing: 2px; font-family: 'Jura', sans-serif; font-weight: 700;">Explorar</button>
+                        <a href="./locais.html"><button type="button" class="btn mt-4 btn-outline-dark" style="border: 4px solid black; width: 350px; height: 85px; border-radius: 50px; font-size: 30px; letter-spacing: 2px; font-family: 'Jura', sans-serif; font-weight: 700;">Explorar</button></a>
                     </div>
 
                     <div id="thirdLeftUpArrow" class="position-relative">
                         <!-- up arrow icon round outline -->
-                        <img src="./images/arrow-up-circle.svg" class="position-absolute bottom-0 start-0" style="height: 50px; transform: scale(1.4); margin-bottom: 55px; left: 100px; margin-left: 25px;"></img>
+                        <a href="#"><img src="./images/arrow-up-circle.svg" class="position-absolute bottom-0 start-0" style="height: 50px; transform: scale(1.4); margin-bottom: 55px; left: 100px; margin-left: 25px;"></img></a>
                     </div>
 
                 </div>
@@ -178,7 +178,7 @@
 
             <div id="blogUpArrow" class="position-relative">
                 <!-- up arrow icon outline -->
-                <img src="./images/arrow-up-circle.svg" class="position-absolute bottom-0 end-0" style="height: 50px; left: 95%; margin-bottom: 55px; transform: scale(1.4);"></img>
+                <a href="#"><img src="./images/arrow-up-circle.svg" class="position-absolute bottom-0 end-0" style="height: 50px; left: 95%; margin-bottom: 55px; transform: scale(1.4);"></img></a>
             </div>
 
         </div>
@@ -191,13 +191,13 @@
             </div>
 
             <div id="footerMiddleIcons" style="height: 250px; width: 400px; display: flex; flex-direction: row; justify-content: center; padding-top: 20px;">
-                <i class="fa-brands fa-square-facebook" style="font-size: 75px; color: rgb(90, 90, 90);"></i>
-                <i class="fa-brands fa-square-instagram" style="font-size: 75px; color: rgb(90, 90, 90);"></i>
-                <i class="fa-brands fa-square-x-twitter" style="font-size: 75px; color: rgb(90, 90, 90);"></i>
+                <a href="https://facebook.com"><i class="fa-brands fa-square-facebook" style="font-size: 75px; color: rgb(90, 90, 90);"></i></a>
+                <a href="https://instagram.com"><i class="fa-brands fa-square-instagram" style="font-size: 75px; color: rgb(90, 90, 90);"></i></a>
+                <a href="https://x.com"><i class="fa-brands fa-square-x-twitter" style="font-size: 75px; color: rgb(90, 90, 90);"></i></a>
             </div>
 
-            <div id="footerBottomText" style="height: 150px; width: 450px; display: flex; justify-content: center; padding-left: 70px;">
-                <h2 style="color: white; font-weight: 600; font-size: 17px; letter-spacing: 0px;">Power by Cesae Digital</h2>
+            <div id="footerBottomText" style="height: 150px; width: 450px; display: flex; justify-content: center; padding-left: 60px;">
+                <h2 style="color: white; font-weight: 600; font-size: 17px; letter-spacing: 0px;">Powered by Cesae Digital</h2>
             </div>
 
         </div>
